Chỉnh sửa reviewDTO và productDTO để phù hợp UI